--- a/MvcProjectCamp/Views/Category/Index.cshtml
+++ b/MvcProjectCamp/Views/Category/Index.cshtml
@@ -7,25 +7,51 @@
     merhaba
 </div>
 <br />
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+
 <h3>mvc kamp tablo ornegi</h3>
-<table>
+<table class="table table-bordered">
     <tr>
         <th>ID</th>
         <th>Kategori Adı</th>
         <th>Açıklama</th>
         <th>Durum</th>
+        <th>Güncelle</th>
+
     </tr>
     <tr>
         <td>1</td>
         <td>Eğitim</td>
         <td>kmslkmxl</td>
         <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
     </tr>
     <tr>
         <td>2</td>
         <td>Spor</td>
         <td>kmslkmxl</td>
         <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
+
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Spor</td>
+        <td>kmslkmxl</td>
+        <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
+
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Spor</td>
+        <td>kmslkmxl</td>
+        <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
+
     </tr>
 
 </table>
+<button class="btn btn-info">Yeni Kategori </button>
+<button class="btn btn-warning"> Kategori Listesi </button>
+<button class="btn btn-danger"> Kategori AçIKLAMALARI </button>
