--- a/MvcProjectCamp/Views/AdminCategory/Index.cshtml
+++ b/MvcProjectCamp/Views/AdminCategory/Index.cshtml
@@ -1,29 +1,34 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
-<br />
-<br />
-<table class="table table-bordered">
-    <tr>
-        <th>ID</th>
-        <th>CATEGORY</th>
-        <th>DURUM</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Spor</td>
-        <td>Aktif</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Spor</td>
-        <td>Aktif</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Spor</td>
-        <td>Aktif</td>
-    </tr>
-</table>
+﻿@using EntityLayer.Concrete
+@Model List<Category>
+    @{
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    }
+    <br />
+    <br />
+    <table class="table table-bordered">
+        <tr>
+            <th>#</th>
+            <th>Kategori Adı</th>
+           
+            <th>Sil</th>
+            <th>Güncelle</th>
+            <th>Başlıklar</th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.CategoryID</td>
+                <td>@item.CategoryName</td>
+              
+                <td><a href="#" class="btn btn-danger">Sil</a></td>
+                <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+                <td><a href="#" class="btn btn-primary">Başlıklar</a></td>
+
+            </tr>
+        }
+    </table>
+    
+    <a href="/AdminCategory/AddCategory " class="btn btn-danger">Yeni kategori</a>
+
